# articlegraph

./: .editorconfig  .flake8  README.md  pyproject.toml  requirements.txt
graph/: admin.py  alchemy.py  forms.py  graphvis.py  models.py  scrap_wikipedia.py  scripts.py  sparql.py  test.json  time_test.py  urls.py  views.py  visjs.py  wiki_api.py  wikidata.py  wikigraph.py
graph/migrations/: 0001_initial.py  0002_link.py  0003_site_thumb_img.py  0004_alter_site_thumb_img.py
graph/static/graph/: graphJSON.json
graph/templates/graph/: main.html  relations_alchemy.html  relations_visjs.html  search_result.html
graph/testDump/: test0.json
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
wiki/: settings.py  urls.py
