[tool.poetry]
name = "Article Graph"
version = "0.1.0"
description = "Wikipedia visualized with graphs"
authors = ["Babak Badakhshan"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
